# neorg-query

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.norg  ROADMAP.norg  flake.nix  neorg-query-scm-1.rockspec  test.sql  test_all_notes.sql
.github.bak/workflows/: template.rockspec
.github/workflows/: luarocks.yml  template.rockspec
lua/libneorg_query/: api.lua
lua/neorg_query/: api.lua  formatter.lua
spec/: tasks.norg
src/: db.rs  doc_parser.rs  lib.rs  main.rs  main.rs.bak  norg_date.rs  orchestrator.rs
